--- a/.github/workflows/assembler.yml
+++ b/.github/workflows/assembler.yml
@@ -29,11 +29,9 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git remote add local "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-          git remote set-url origin "https://github.com/saltstack/salt.git"
-          git remote set-url --push origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+          git remote add upstream "https://github.com/saltstack/salt.git"
           git fetch --all
-          git assembler --config .git-assembly --assemble --verbose
+          git assembler --config .git-assembly --assemble --verbose --create
           git checkout master
           git push --verbose --force origin master
 
@@ -46,7 +44,7 @@ jobs:
             echo "Tagging ${tag}-boto3"
             git branch --force wip/boto3-tmp-tagging "${tag}"
             git checkout wip/boto3-tmp-tagging
-            git rev-list --reverse origin/master...master | git cherry-pick --stdin
+            git rev-list --reverse upstream/master...master | git cherry-pick --stdin
             git tag --force "${tag}-boto3"
           done
           git checkout master
