--- a/.github/workflows/assembler.yml
+++ b/.github/workflows/assembler.yml
@@ -42,18 +42,18 @@ jobs:
           git checkout master
           git push --verbose --force origin master
 
-      - name: Update Releases
-        run: |
-          git fetch --all
-          TAGS="$(git tag -l | grep -P '^v3\d\d\d\d*' | grep -Pv '\drc\d+' | grep -v '_docs$')"
-          for tag in ${TAGS}; do
-            git checkout master
-            echo "Tagging ${tag}-boto3"
-            git branch --force wip/boto3-tmp-tagging "${tag}"
-            git checkout wip/boto3-tmp-tagging
-            git rev-list --reverse upstream/master...master | git cherry-pick --stdin
-            git tag --force "${tag}-boto3"
-          done
-          git checkout master
-          git branch -D wip/boto3-tmp-tagging
-          git push -f --tags origin
+#      - name: Update Releases
+#        run: |
+#          git fetch --all
+#          TAGS="$(git tag -l | grep -P '^v3\d\d\d\d*' | grep -Pv '\drc\d+' | grep -v '_docs$')"
+#          for tag in ${TAGS}; do
+#            git checkout master
+#            echo "Tagging ${tag}-boto3"
+#            git branch --force wip/boto3-tmp-tagging "${tag}"
+#            git checkout wip/boto3-tmp-tagging
+#            git rev-list --reverse upstream/master...master | git cherry-pick --stdin
+#            git tag --force "${tag}-boto3"
+#          done
+#          git checkout master
+#          git branch -D wip/boto3-tmp-tagging
+#          git push -f --tags origin
